# mdx

./: .gitignore  .pylintrc  README.md  dbc_to_source.py  mdx.py  mdxrp.py  pyproject.toml  source_to_dbc.py  test_mdx.py  test_notebook.py
examples/: ex1_no_code.ipynb  ex2_multiple_refs.ipynb
js/: xr-cite.js  xr.js  xr2.js
mdxrp/: __init__.py  cli.py  core.py  processor.py
tests/: test_mdx.py  test_notebook.py
