[project]
name = "mdxrp"
version = "0.1.0"
description = "Markdown preprocessor for reproducible documents"
authors = [{name = "David Harrison"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mdxrp = "mdxrp.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
